--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/whitebackground_1"
     android:alpha="1.0"
     tools:context=".MainActivity">
 
@@ -25,10 +24,11 @@
             android:id="@+id/text_toolbar_title_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fontFamily="@font/roboto_bold"
-            android:textAlignment="center"
+            android:fontFamily="@font/croissant_one"
+            android:text="MovieMania"
             android:textColor="@color/textWhite"
             android:textSize="20sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="18dp" />
     </android.support.v7.widget.Toolbar>
@@ -60,11 +60,9 @@
 
     <ImageView
         android:id="@+id/image_backgroundProgress_main"
-        android:layout_width="260dp"
-        android:layout_height="260dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/card_detais_main"
@@ -74,7 +72,7 @@
         android:id="@+id/LoadingIndicator"
         style="@style/AVLoadingIndicatorView.Large"
         android:layout_width="124dp"
-        android:layout_height="128dp"
+        android:layout_height="124dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="48dp"
@@ -87,31 +85,35 @@
     <ImageView
         android:id="@+id/image_no_connection"
         android:layout_width="91dp"
-        android:layout_height="250dp"
+        android:layout_height="203dp"
         android:layout_marginBottom="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/image_backgroundProgress_main"
         app:layout_constraintEnd_toEndOf="@+id/image_backgroundProgress_main"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="@+id/image_backgroundProgress_main"
+        app:layout_constraintTop_toBottomOf="@+id/card_detais_main"
+        app:layout_constraintVertical_bias="0.061"
         app:srcCompat="@drawable/ic_no_connection" />
 
     <TextView
         android:id="@+id/text_progress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/roboto_bold"
         android:text="Please Wait...\n Fetching Data from Internet..."
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/image_backgroundProgress_main"
         app:layout_constraintEnd_toEndOf="@+id/image_backgroundProgress_main"
-        app:layout_constraintStart_toStartOf="@+id/image_backgroundProgress_main" />
+        app:layout_constraintStart_toStartOf="@+id/image_backgroundProgress_main"
+        app:layout_constraintTop_toBottomOf="@+id/LoadingIndicator" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_detais_main"
