--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -100,7 +100,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Title"
+                android:text="@string/TEXT_TITLE_DETAIL"
                 android:textAlignment="center"
                 android:textColor="@color/textBlack"
                 android:textSize="24sp"
@@ -114,7 +114,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="Release Date"
+                android:text="@string/RELEASE_DATE_DETAIL"
                 android:textAlignment="center"
                 android:textColor="@color/textDarkBlue"
                 android:textSize="14sp"
@@ -127,7 +127,7 @@
                 android:id="@+id/text_release_detail"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="00-00-0000"
+                android:text="@string/DEFAULT_RELEASE_DETAIL"
                 android:textAlignment="center"
                 android:textColor="@color/textBlack"
                 android:textSize="14sp"
@@ -142,7 +142,7 @@
                 android:layout_marginEnd="24dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
-                android:text="Plot Synopsis"
+                android:text="@string/OVERVIEW_DETAIL"
                 android:textAlignment="center"
                 android:textColor="@color/textDarkBlue"
                 android:textSize="14sp"
@@ -156,7 +156,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="Genre"
+                android:text="@string/GENRE_DETAIL"
                 android:textAlignment="center"
                 android:textColor="@color/textDarkBlue"
                 android:textSize="14sp"
@@ -186,7 +186,7 @@
                 android:layout_marginTop="56dp"
                 android:background="@drawable/button_rounded"
                 android:padding="4dp"
-                android:text="IMDB Rating\n0.0"
+                android:text="@string/IMDB_DETAIL"
                 android:textAlignment="center"
                 android:textColor="@color/textBlack"
                 android:textSize="14sp"
@@ -202,7 +202,7 @@
                 android:layout_marginStart="16dp"
                 android:background="@drawable/button_rounded"
                 android:padding="4dp"
-                android:text="Total Votes\n0000"
+                android:text="@string/TOTAL_VOTES_DETAIL"
                 android:textAlignment="center"
                 android:textColor="@color/textBlack"
                 android:textSize="14sp"
@@ -218,7 +218,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Story of the plot will apper here"
+                android:text="@string/TEXT_OVERVIEW_DETAIL"
                 android:textColor="@color/textBlack"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -249,7 +249,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
-                android:text="Videos"
+                android:text="@string/TAG_VIDEOS_DETAIL"
                 android:textAlignment="center"
                 android:textColor="@color/textDarkBlue"
                 android:textStyle="bold"
@@ -275,7 +275,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
-                android:text="Reviews"
+                android:text="@string/TAG_REVIEWS_DETAIL"
                 android:textAlignment="center"
                 android:textColor="@color/textDarkBlue"
                 android:textStyle="bold"
