--- a/app/src/main/res/layout/activity_favourites_detail.xml
+++ b/app/src/main/res/layout/activity_favourites_detail.xml
@@ -84,7 +84,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="TextView"
+                android:text="@string/TEXT_TITLE_DETAIL"
                 android:textAlignment="center"
                 android:textColor="@color/textBlack"
                 android:textSize="24sp"
@@ -98,7 +98,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="Release Date"
+                android:text="@string/RELEASE_DATE_DETAIL"
                 android:textAlignment="center"
                 android:textColor="@color/textDarkBlue"
                 android:textSize="14sp"
@@ -110,7 +110,7 @@
                 android:id="@+id/text_release_detail_favourites"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="@string/DEFAULT_RELEASE_DETAIL"
                 android:textAlignment="center"
                 android:textColor="@color/textBlack"
                 android:textSize="14sp"
@@ -125,7 +125,7 @@
                 android:layout_marginEnd="24dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
-                android:text="Plot Synopsis"
+                android:text="@string/OVERVIEW_DETAIL"
                 android:textAlignment="center"
                 android:textColor="@color/textDarkBlue"
                 android:textSize="14sp"
@@ -138,7 +138,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="Genre"
+                android:text="@string/GENRE_DETAIL"
                 android:textAlignment="center"
                 android:textColor="@color/textDarkBlue"
                 android:textSize="14sp"
@@ -167,7 +167,7 @@
                 android:layout_marginTop="56dp"
                 android:background="@drawable/button_rounded"
                 android:padding="4dp"
-                android:text="TextView"
+                android:text="@string/IMDB_DETAIL"
                 android:textAlignment="center"
                 android:textColor="@color/textBlack"
                 android:textSize="14sp"
@@ -183,7 +183,7 @@
                 android:layout_marginStart="16dp"
                 android:background="@drawable/button_rounded"
                 android:padding="4dp"
-                android:text="TextView"
+                android:text="@string/TOTAL_VOTES_DETAIL"
                 android:textAlignment="center"
                 android:textColor="@color/textBlack"
                 android:textSize="14sp"
@@ -199,7 +199,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="TextView"
+                android:text="@string/TEXT_OVERVIEW_DETAIL"
                 android:textColor="@color/textBlack"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
