--- a/app/src/main/res/layout/movie_single_holder.xml
+++ b/app/src/main/res/layout/movie_single_holder.xml
@@ -8,10 +8,13 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/image_movie_uppar_recycler"
-        android:layout_width="175dp"
+        android:layout_width="170dp"
         android:layout_height="250dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
         app:cardCornerRadius="4dp"
-        app:cardElevation="4dp"
+        app:cardElevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -30,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         app:cardCornerRadius="4dp"
-        app:cardElevation="16dp"
+        app:cardElevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/image_movie_uppar_recycler"
         app:layout_constraintStart_toStartOf="@+id/image_movie_uppar_recycler"
@@ -48,7 +51,7 @@
                 android:layout_height="52dp"
                 android:layout_marginTop="8dp"
                 android:gravity="center_vertical|center_horizontal"
-                android:text="TextView\nTitle\nHere"
+                android:text="@string/TITLE_MOVIE_HOLDER"
                 android:textAlignment="center"
                 android:textColor="@color/colorBlack"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -61,10 +64,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:text="TextView\nfdfdf"
-                android:textAlignment="center"
                 android:gravity="center"
-                android:textSize="10sp"
+                android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="@+id/constraint_Movie_lower"
                 app:layout_constraintEnd_toEndOf="@+id/text_title_recycler"
                 app:layout_constraintStart_toStartOf="@+id/text_title_recycler"
