--- a/app/src/main/res/layout/review_single_holder.xml
+++ b/app/src/main/res/layout/review_single_holder.xml
@@ -2,12 +2,10 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -31,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_bold"
-                android:text="Reviews will apear here"
+                android:text="@string/TEXT_MESSAGE_REVIEW"
                 android:textAlignment="center"
                 android:textSize="14sp" />
 
@@ -39,7 +37,7 @@
                 android:id="@+id/text_auther_name_review"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Auther will apper here"
+                android:text="@string/TEXT_AUTHER_REVIEW"
                 android:textAlignment="textEnd"
                 android:textSize="12sp"
                 android:textStyle="italic" />
