--- a/app/src/main/res/layout/trailer_single_adapter.xml
+++ b/app/src/main/res/layout/trailer_single_adapter.xml
@@ -3,11 +3,9 @@
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/recycler_card_trailer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -63,7 +61,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="TextView"
+                android:text="@string/TEXT_TITLE_VIDEO_RECYCLER"
                 android:textAlignment="center"
                 android:textSize="14sp"
                 android:textStyle="bold"
