--- a/app/src/main/res/layout/activity_about_app.xml
+++ b/app/src/main/res/layout/activity_about_app.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".AboutAppActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AboutAppActivity">
+    android:background="@drawable/whitebackground_1">
+<android.support.constraint.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    >
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_about"
@@ -49,8 +55,8 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:fontFamily="serif"
         android:text="@string/TEXT_DETAIL_ABOUT"
@@ -135,3 +141,4 @@
         app:srcCompat="@drawable/loading_new" />
 
 </android.support.constraint.ConstraintLayout>
+</ScrollView>
