--- a/app/src/main/res/layout/movie_single_holder.xml
+++ b/app/src/main/res/layout/movie_single_holder.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitXY"
+            android:transitionName="Movie_Poster"
             app:srcCompat="@color/colorAccent" />
     </android.support.v7.widget.CardView>
 
@@ -50,6 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="52dp"
                 android:layout_marginTop="8dp"
+                android:transitionName="MovieTitle"
                 android:gravity="center_vertical|center_horizontal"
                 android:text="@string/TITLE_MOVIE_HOLDER"
                 android:textAlignment="center"
